corrected whitespace issue by invisible text

--- a/theme/css/breaks/mobile.css
+++ b/theme/css/breaks/mobile.css
@@ -1,7 +1,7 @@
 header,
 #main,
 footer {
-    font-size: 1em;
+    font-size: 1rem;
 }
 
 header #block-hauptnavigation,
@@ -32,6 +32,7 @@ footer .region-footer {
 }
 
 header {
+    padding-top: 1em;
     border-bottom: 3px green solid;
 }
 
